# NetSim

./: .gitignore  CMakeLists.txt  main.cpp
include/: config.hxx  factory.hxx  helpers.hxx  node_collection.hxx  nodes.hxx  package.hxx  storage_types.hxx  types.hxx
mocks/: global_functions_mock.hxx  nodes_mocks.hxx
src/: factory.cpp  nodes.cpp
tests/: test_nodes.cpp
